Changed review card small video to display GIF, fixed activity page, realign provider show page, changed fav colour to yellow, changed categoy card size

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -78,4 +78,5 @@
   position: fixed;
   top: 5px;
   left: 10px;
+  z-index: -1;
 }
