--- a/app/assets/stylesheets/components/_slider.scss
+++ b/app/assets/stylesheets/components/_slider.scss
@@ -1,7 +1,7 @@
 /* Slider */
 .slider {
 	margin-top: 53%;
-  padding: 3%;
+  padding-left: 2%;
   width: 100%;
 }
 
